<resources>
    <string name="app_name">Joking Hazard</string>
    <string name="name_prompt">Enter your Name</string>
    <string name="name_placeholder">My name</string>
    <string name="create_game_button">Create Game</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="continue_button">Continue</string>
    <string name="join_game_button">Join Game</string>
    <string name="room_code_message">This is your Room Code! Go tell your friends about it</string>
    <string name="start_game_button">Start Game</string>
    <string name="yourStory">Your Story:</string>
    <string name="chooseStory">Choose your favorite Story:</string>
    <string name="room_code_placeholder">1234</string>
    <string name="confirm_button">Confirm</string>

    <!--    ContentDescriptions
    -->
    <string name="playedCardFromDeck">This is the story card from the deck</string>
    <string name="playedCardFromJudge">This is the story card from the Judge</string>
    <string name="playedCardFromWinner">This is the story card from the Winner</string>
  
    <string name="choose_gamemode">Game options</string>
    <string name="save_option_button">Create Game</string>
    <string name="normal">Normal</string>
    <string name="point_limit">Point Limit</string>
    <string name="time_limit_per_turn">Time Limit per Turn</string>
    <string name="waiting_for_players">Waiting for players</string>
    <string name="points_placeholder">0 Points</string>
    <plurals name="points">
        <item quantity="one">%d Point</item>
        <item quantity="other">%d Points</item>
    </plurals>
    <string name="won_the_game">%s won the game!</string>
    <string name="won_the_round">%s won this round!</string>
    <string name="leave_game">Leave Game</string>
    <string name="report">Report</string>
</resources>