<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VotingUIFragment"
    android:background="#66141414"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/yourStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourStory"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ComicStoryImg_Deck"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:contentDescription="@string/playedCardFromDeck"
                app:srcCompat="@drawable/transparent" />

            <ImageView
                android:id="@+id/ComicStoryImg_Judge"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:contentDescription="@string/playedCardFromJudge"
                app:srcCompat="@drawable/transparent" />

            <ImageView
                android:id="@+id/ComicStoryImg_Winner"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:contentDescription="@string/playedCardFromWinner"
                app:srcCompat="@drawable/transparent" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/chooseStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseStory"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:id="@+id/layoutImgButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- ToDo Image Buttons werden zukünftig automatisch erstellt werden je nach Spielerzahl NUR zu Presentations zwecken noch vorhanden-->
            <ImageButton
                android:id="@+id/cardOfPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/cardOfPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/cardOfPlayer3"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/transparent" />

        </LinearLayout>

        <Button
            android:id="@+id/confirmStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:enabled="false"
            android:text="@string/confirm_button"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>